# Aerochat

./: .gitignore  .gitmodules  Aerochat.sln  Aerovoice.sln  README.md  aerochat.iss
Aerobool/: Aerobool.sln
Aerochat/: Aerochat - Backup.csproj  Aerochat.csproj  Aerochat.sln  App.xaml  App.xaml.cs  AssemblyInfo.cs  EmojiDictionary.cs  FontAppearanceManager.cs  app.manifest
Aerochat/Ads/: Ads.xml
Aerochat/AppHostBin/: README.md
Aerochat/Attributes/: DisplayAttribute.cs  MultiAttribute.cs
Aerochat/BBCode/: BBCodeParser.cs  BBCodeToken.cs
Aerochat/Controls/: AdImage.xaml  AdImage.xaml.cs  AnimatedTileImage.xaml  AnimatedTileImage.xaml.cs  AnimatedTileSequence.cs  AudioPlayer.xaml  AudioPlayer.xaml.cs  BBCode.cs  BasicTitlebar.cs  ColorizedNineSlice.cs  CommandLink.cs  HomeTreeView.cs  InteropContextMenu.cs  MessageParser.Designer.cs  MessageParser.cs  NativeToolTip.cs  NativeToolTipControlService.cs  NativeTooltipOld.cs  NineSlice.cs  NineSliceButton.cs  NoDwmTitlebar.xaml  NoDwmTitlebar.xaml.cs  OverflowPanel.cs  (+6 more)
AerochatSetup/: AerochatSetup.vdproj
Aerotest/: Aerotest.csproj  WpfTestBootstrap.cs
Aerovoice/: Aerovoice.csproj  README.md
Aerovoice/Native/: Cargo.toml
Aerovoice/Native/src/: char_ext.rs  external.rs  lib.rs  rtp.rs  session.rs  snowflake.rs
Aerovoice/Native/src/crypto/: aead_xchacha20_poly1305_rtpsize.rs  mod.rs
DSharpPlus/: DSharpPlus.csproj  DiscordConfiguration.cs  Utilities.cs
DSharpPlus.Windows/: DSharpPlus.Windows.csproj  DiscordChannelExtensions.cs
Dynamic/: news.json  notices.json
Installer/: Aerochat.nsi
(+295 files in other folders)
