[package]
name = "aerovoice-native"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
audiopus = "0.2.0"
bytemuck = { version = "1.23.0", features = ["derive"] }
byteorder = "1.5.0"
bytes = "1.10.1"
chacha20poly1305 = "0.10.1"
cpal = "0.15.3"
fixed-resample = "0.8.0"
hex = "0.4.3"
rand = "0.9.1"
rtrb = "0.3.2"
sodiumoxide = "0.2.7"
thiserror = "2.0.12"
